Fixing intro section grammar, fixing spacing with small intro paragraph

--- a/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
@@ -73,4 +73,8 @@
       }
     }
   }
+
+  .introParagraph {
+    margin-bottom: 4rem;
+  }
 }
